--- a/style.css
+++ b/style.css
@@ -62,6 +62,28 @@ body {
     transition: 0.3s ease;
 }
 
+@media (max-width:520px) {
+    .input-btn-container{
+        width: 100%;
+    }
+    .main-container {
+        margin-top: 3rem;
+        width: 100%;
+        min-width: 100vh;
+        max-width: 100vh;
+        padding: 0;
+    }
+    .task-list-container{
+        width: 95%;
+    }
+}
+
+@media (max-width:920px) {
+    .main-container {
+        min-width: 70vw;
+    }
+}
+
 .input-btn-container button:hover {
     background-color: rgb(98, 58, 135);
     color: snow;
@@ -77,12 +99,10 @@ body {
 .task-list-container li {
     font-family: 'Poppins', sans-serif;
     font-family: 'Varela Round', sans-serif;
-    padding: 15px 5px;
+    padding: 10px 2px;
     margin: 5px;
     width: 90%;
     color: snow;
-    background-color: rgb(87, 47, 125);
-    box-shadow: 1px 1px 2px rgb(149, 66, 226);
     position: relative;
     cursor: pointer;
 }
@@ -108,22 +128,9 @@ body {
     background-color: #fff;
 }
 
-@media (max-width:720px) {
-    .main-container {
-        min-width: 100vw;
-    }
-}
-
-@media (max-width:920px) {
-    .main-container {
-        min-width: 70vw;
-    }
-}
-
 #dummy-text{
     font-family: 'Poppins', sans-serif;
     font-family: 'Varela Round', sans-serif;
     margin: 5px;
     color: snow;
-
 }
