--- a/style.css
+++ b/style.css
@@ -8,52 +8,68 @@ body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    background-image: linear-gradient(25deg, rgb(96, 45, 96), rgb(144, 79, 205));
+    background-image: linear-gradient(125deg, blueviolet, rgb(6, 60, 60));
     background-position: center;
     background-size: cover;
 }
 
 .main-container {
-    margin-top: 3rem;
-    min-width: 30vw;
-    max-width: 40vw;
+    margin-top: 4rem;
+    min-width: 450px;
+    max-width: 500px;
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding: 0 1rem;
 }
 
- h1 {
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.logo img {
+    border-radius: 50%;
+    width: 2rem;
+}
+
+h1 {
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Varela Round', sans-serif;
     color: snow;
-    text-shadow: 1px  2px rgb(37, 31, 31);
+    font-weight: 900;
+    text-shadow: 2px 2px rgb(44, 129, 129);
 }
 
 .input-btn-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px 1rem;
     height: 5rem;
-    width: 95%;
+    gap: 5px;
+    width: 100%;
     position: relative;
 }
 
 .input-btn-container input {
-    border: 1px solid black;
+    border: none;
     outline: none;
     padding: 0.7rem 3.5rem;
     width: 100%;
     transition: 0.3s ease;
+    color: blueviolet;
 }
 
 .input-btn-container input:hover {
-    background-color: rgb(155, 127, 181);
+    background-color: rgb(98, 58, 135);
+    color: snow;
 }
 
 .input-btn-container button {
-    position: absolute;
-    right: 1rem;
     padding: 0.7rem 1.5rem;
-    border: 1px solid rgb(56, 51, 51);
+    border: none;
     cursor: pointer;
     outline: none;
     background-color: snow;
@@ -62,49 +78,26 @@ body {
     transition: 0.3s ease;
 }
 
-@media (max-width:520px) {
-    .input-btn-container{
-        width: 100%;
-    }
-    .main-container {
-        margin-top: 3rem;
-        width: 100%;
-        min-width: 100vh;
-        max-width: 100vh;
-        padding: 0;
-    }
-    .task-list-container{
-        width: 95%;
-    }
-}
-
-@media (max-width:920px) {
-    .main-container {
-        min-width: 70vw;
-    }
-}
-
 .input-btn-container button:hover {
     background-color: rgb(98, 58, 135);
     color: snow;
 }
 
 .task-list-container {
-    width: 90%;
-    background-image: linear-gradient(45deg, rgb(99, 32, 99), rgb(132, 77, 184));
-    padding: 1rem;
-    box-shadow: 1px 1px 2px rgb(149, 66, 226);
+    width: 100%;
 }
 
 .task-list-container li {
     font-family: 'Poppins', sans-serif;
     font-family: 'Varela Round', sans-serif;
-    padding: 10px 2px;
-    margin: 5px;
-    width: 90%;
+    padding: 8px 0;
     color: snow;
     position: relative;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .task-list-container li.checked {
@@ -112,9 +105,6 @@ body {
 }
 
 .task-list-container li i {
-    position: absolute;
-    right: -35px;
-    top: 10px;
     cursor: pointer;
     margin-left: 1rem;
     background-color: rgb(130, 16, 237);
@@ -128,9 +118,266 @@ body {
     background-color: #fff;
 }
 
-#dummy-text{
+@media (max-width:520px) {
+    .input-btn-container {
+        width: 100%;
+    }
+
+    .main-container {
+        margin-top: 4.5rem;
+        width: 90%;
+        min-width: 100vh;
+        max-width: 100vh;
+        padding: 0;
+    }
+
+    .task-list-container {
+        width: 100%;
+        padding: 0 3px;
+    }
+}
+
+@media (max-width:920px) {
+    .main-container {
+        min-width: 70vw;
+    }
+}
+
+
+#users-information {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    color: #fff;
     font-family: 'Poppins', sans-serif;
     font-family: 'Varela Round', sans-serif;
-    margin: 5px;
+    padding: 7px 14px;
+    background-image: linear-gradient(25deg, blueviolet, rgb(49, 186, 186));
+    font-size: 1rem;
+    box-shadow: 2px 2px 10px hsla(0, 1, 1, 0.5);
+}
+
+#profile-button:hover {
+    background: white;
+    color: blueviolet;
+}
+
+.profile-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-height: 260px;
+    min-width: 250px;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgb(72, 31, 110);
+    opacity: 0.8;
+    box-shadow: 2px 2px 5px blueviolet;
+}
+
+#name {
+    padding: 6px 2px;
+    border: none;
+    outline: none;
+    width: 80%;
+    margin: 7px 0;
+    color: rgb(91, 66, 116);
+    font-weight: 600;
+}
+
+#name::placeholder {
+    opacity: 3;
+    color: rgb(91, 66, 116);
+}
+
+#gender {
+    width: 80%;
+    padding: 6px 2px;
+    border: none;
+    outline: none;
+    margin: 7px 0;
+    font-weight: 600;
+    color: rgb(91, 66, 116);
+}
+
+#gender :nth-child(2),
+:nth-child(3) {
+    color: rgb(48, 39, 39);
+}
+
+#save-btn,
+#delete-btn {
+    margin: 7px 0 0 3px;
+    padding: 7px 5px;
+    width: 60%;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: rgb(130, 16, 237);
+    font-weight: 600;
+    transition: 0.3s ease;
+}
+
+#save-btn:hover {
+    color: rgb(130, 16, 237);
+    background-color: white;
+}
+
+#delete-btn:hover {
+    color: rgb(130, 16, 237);
+    background-color: white;
+}
+
+.fa-xmark {
+    position: absolute;
+    top: -28px;
+    right: -28px;
+    transform: scale(1.5);
+    color: white;
+    background-color: rgb(46, 9, 81);
+    padding: 2px 4px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+
+.fa-xmark:hover {
+    color: blueviolet;
+    background-color: #fff;
+}
+
+.error-message,
+#error-in-noti {
+    position: absolute;
+    bottom: 10px;
     color: snow;
+    font-size: 12px;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Varela Round', sans-serif;
+    text-align: center;
+}
+
+.main-icons {
+    width: 120px;
+    height: 60px;
+    padding: 0;
+    position: absolute;
+    top: 10px;
+    right: 0;
+}
+
+#profile-button,
+.noti-btn {
+    padding: 0.5rem;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: white;
+    padding: 7px 9px;
+    border-radius: 50%;
+    background: blueviolet;
+    transition: 0.3s ease;
+    margin: 5px;
+}
+
+.noti-btn:hover {
+    background: white;
+    color: blueviolet;
+}
+
+.noti-info-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-height: 260px;
+    min-width: 200px;
+    max-width: 300px;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgb(72, 31, 110);
+    opacity: 0.8;
+    box-shadow: 2px 2px 5px blueviolet;
+    text-align: center;
+    padding: 1rem 10px;
+}
+
+.noti-info-container label {
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Varela Round', sans-serif;
+    font-size: 15px;
+    color: #fff;
+    /* position: absolute; */
+}
+
+.noti-info-container h4 {
+    color: snow;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Varela Round', sans-serif;
+    margin: 15px 0;
+}
+
+.noti-info-container input {
+    padding: 6px 2px;
+    border: none;
+    outline: none;
+    width: 80%;
+    margin: 7px 0;
+    color: rgb(91, 66, 116);
+    font-weight: 600;
+}
+
+.noti-info-container input ::placeholder {
+    letter-spacing: 1px;
+    color: blueviolet;
+}
+
+.noti-info-container button {
+    margin: 7px 0 0 3px;
+    padding: 7px 5px;
+    width: 60%;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    color: white;
+    background-color: rgb(130, 16, 237);
+    font-weight: 600;
+    transition: 0.3s ease;
+}
+
+.noti-info-container button:hover {
+    color: rgb(130, 16, 237);
+    background-color: white;
+}
+
+.alert-popup-box {
+    position: absolute;
+    top: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: center;
+    background: rgb(56, 2, 107);
+    padding: 8px 2rem;
+    gap: 10px;
+    text-align: center;
+    visibility: hidden;
+}
+
+.alert-popup-box i {
+    color: #fff;
+}
+
+.alert-popup {
+    font-size: 1rem;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Varela Round', sans-serif;
 }
