--- a/style.css
+++ b/style.css
@@ -56,10 +56,16 @@ h1 {
 .input-btn-container input {
     border: none;
     outline: none;
-    padding: 0.7rem 3.5rem;
+    padding: 0.7rem 2rem;
     width: 100%;
     transition: 0.3s ease;
     color: blueviolet;
+}
+
+.input-btn-container input::placeholder {
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    opacity: 1;
 }
 
 .input-btn-container input:hover {
@@ -74,6 +80,7 @@ h1 {
     outline: none;
     background-color: snow;
     color: blueviolet;
+    letter-spacing: 2px;
     font-weight: 600;
     transition: 0.3s ease;
 }
@@ -135,6 +142,14 @@ h1 {
         width: 100%;
         padding: 0 3px;
     }
+
+    .noti-info-container {
+        min-width: 80vw;
+    }
+
+    .profile-container {
+        min-width: 80vw;
+    }
 }
 
 @media (max-width:920px) {
@@ -142,7 +157,6 @@ h1 {
         min-width: 70vw;
     }
 }
-
 
 #users-information {
     position: absolute;
@@ -155,6 +169,7 @@ h1 {
     background-image: linear-gradient(25deg, blueviolet, rgb(49, 186, 186));
     font-size: 1rem;
     box-shadow: 2px 2px 10px hsla(0, 1, 1, 0.5);
+    overflow: hidden;
 }
 
 #profile-button:hover {
@@ -177,16 +192,42 @@ h1 {
     background: rgb(72, 31, 110);
     opacity: 0.8;
     box-shadow: 2px 2px 5px blueviolet;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Varela Round', sans-serif;
+}
+
+.profile-container .name-div {
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.profile-container .name-div,
+.gender-div {
+    font-size: 14px;
+}
+
+.profile-container .gender-div {
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    width: 75%;
+}
+
+.profile-container .gender-div select option:hover {
+    background: blueviolet;
 }
 
 #name {
     padding: 6px 2px;
     border: none;
     outline: none;
-    width: 80%;
     margin: 7px 0;
     color: rgb(91, 66, 116);
     font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Varela Round', sans-serif;
 }
 
 #name::placeholder {
@@ -195,18 +236,14 @@ h1 {
 }
 
 #gender {
-    width: 80%;
     padding: 6px 2px;
     border: none;
     outline: none;
     margin: 7px 0;
     font-weight: 600;
     color: rgb(91, 66, 116);
-}
-
-#gender :nth-child(2),
-:nth-child(3) {
-    color: rgb(48, 39, 39);
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Varela Round', sans-serif;
 }
 
 #save-btn,
@@ -294,9 +331,8 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-height: 260px;
-    min-width: 200px;
-    max-width: 300px;
+    height: 260px;
+    width: 250px;
     visibility: hidden;
     display: flex;
     flex-direction: column;
@@ -314,7 +350,6 @@ h1 {
     font-family: 'Varela Round', sans-serif;
     font-size: 15px;
     color: #fff;
-    /* position: absolute; */
 }
 
 .noti-info-container h4 {
@@ -359,13 +394,14 @@ h1 {
 
 .alert-popup-box {
     position: absolute;
-    top: 10px;
+    right: 1rem;
+    bottom: 2rem;
     display: flex;
     flex-direction: row;
     align-items: start;
     justify-content: center;
     background: rgb(56, 2, 107);
-    padding: 8px 2rem;
+    padding: 8px 1px;
     gap: 10px;
     text-align: center;
     visibility: hidden;
@@ -373,9 +409,11 @@ h1 {
 
 .alert-popup-box i {
     color: #fff;
+    padding: 0 0 0 10px;
 }
 
 .alert-popup {
+    padding: 0 10px 0 0;
     font-size: 1rem;
     color: #fff;
     font-family: 'Poppins', sans-serif;
