--- a/style.css
+++ b/style.css
@@ -2,429 +2,218 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    background-image: linear-gradient(125deg, blueviolet, rgb(6, 60, 60));
-    background-position: center;
-    background-size: cover;
-}
-
-.main-container {
-    margin-top: 4rem;
-    min-width: 450px;
-    max-width: 500px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 0 1rem;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-}
-
-.logo img {
-    border-radius: 50%;
-    width: 2rem;
-}
-
-h1 {
+    background-image: linear-gradient(135deg, rgb(45, 119, 119), rgb(82, 53, 110));
     font-family: 'Poppins', sans-serif;
     font-family: 'Varela Round', sans-serif;
-    color: snow;
-    font-weight: 900;
-    text-shadow: 2px 2px rgb(44, 129, 129);
-}
-
-.input-btn-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
-    background-color: #1a1919;
-    width: 100%;
-    margin: 1rem 0;
-    padding: 3px ;
-    position: relative;
-    border-radius: 5px;
-}
-
-.input-btn-container input {
-    border: none;
-    outline: none;
-    padding: 0.7rem 2rem;
-    width: 100%;
-    transition: 0.3s ease;
-    color: #fff;
-    border-radius: 5px;
-    background: transparent;
-}
-
-.input-btn-container input::placeholder {
-    letter-spacing: 1px;
-    word-spacing: 1px;
-    opacity: 1;
-}
-
-.input-btn-container input:hover {
-    background-image: linear-gradient(25deg, rgb(91, 44, 134), rgb(52, 123, 123));
-}
-
-hr{
-    color: #fff;
-    height: 30px;
-}
-
-.input-btn-container button {
-    padding: 0.7rem 1.5rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    outline: none;
-    background: transparent;
-    color: #fff;
-    letter-spacing: 2px;
-    font-weight: 500;
-    transition: 0.3s ease;
-}
-
-.input-btn-container button:hover {
-    background-image: linear-gradient(145deg, rgb(91, 44, 134), rgb(52, 123, 123));
-}
-
-.task-list-container {
-    width: 100%;
-}
-
-.task-list-container li {
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
-    padding: 8px 0;
-    color: snow;
-    position: relative;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.task-list-container li.checked {
-    text-decoration: line-through;
-}
-
-.task-list-container li i {
-    cursor: pointer;
-    margin-left: 1rem;
-    background-color: rgb(130, 16, 237);
-    padding: 8px;
-    border-radius: 50%;
-    transition: 0.3s ease;
-}
-
-.task-list-container li i:hover {
-    color: blueviolet;
-    background-color: #fff;
-}
-
-@media (max-width:520px) {
-    .input-btn-container {
-        width: 100%;
-    }
-
-    .main-container {
-        margin-top: 4.5rem;
-        width: 90%;
-        min-width: 100vh;
-        max-width: 100vh;
-        padding: 0;
-    }
-
-    .task-list-container {
-        width: 100%;
-        padding: 0 3px;
-    }
-
-    .noti-info-container {
-        max-width: 90vw;
-    }
-
-    .profile-container {
-        min-width: 90vw;
-    }
-}
-
-@media (max-width:920px) {
-    .main-container {
-        min-width: 70vw;
-    }
-}
-
-#users-information {
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
-    padding: 7px 14px;
-    background-image: linear-gradient(25deg, blueviolet, rgb(49, 186, 186));
-    font-size: 1rem;
-    box-shadow: 2px 2px 10px hsla(0, 1, 1, 0.5);
     overflow: hidden;
 }
 
-#profile-button:hover {
-    background: white;
-    color: blueviolet;
+#container {
+    background-image: linear-gradient(135deg, blueviolet, cyan);
+    text-align: center;
+    padding: 2rem;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    width: 350px;
+    margin-top: -10rem;
+    color: #f9f9f9;
+    box-shadow: 1px 1px 8px rgba(36, 36, 36, 0.932);
+    overflow: hidden;
 }
 
-.profile-container {
+label {
+    display: block;
+    margin: 15px 0 10px 0;
+}
+
+#birthdate {
+    width: 80%;
+    padding: 8px;
+    margin-bottom: 15px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    color: blueviolet;
+    box-shadow: 1px 1px 5px rgba(36, 36, 36, 0.932);
+}
+
+#cal-age {
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    word-spacing: 2px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    box-shadow: 1px 1px 3px rgba(36, 36, 36, 0.932);
+}
+
+#cal-age:hover {
+    background-color: #0056b3;
+}
+
+.user-container {
+    background-image: linear-gradient(135deg, cyan, blueviolet);
+    margin-top: -5rem;
+    border-radius: 5px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-height: 260px;
-    min-width: 250px;
-    visibility: hidden;
     display: flex;
     flex-direction: column;
+    padding: 2rem 1rem;
     align-items: center;
     justify-content: center;
-    background: rgb(72, 31, 110);
-    opacity: 0.9;
-    padding: 0 2rem;
-    box-shadow: 2px 2px 5px blueviolet;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
+    overflow: hidden;
+    visibility: hidden;
+    box-shadow: 1px 1px 5px rgba(36, 36, 36, 0.932);
 }
 
-.profile-container .name-div {
-    display: flex;
-    flex-direction: column;
+.user-container h3 {
     color: #fff;
     margin-bottom: 10px;
-    font-size: 14px;
-    width: 100%;
 }
 
-
-.profile-container .gender-div {
-    display: flex;
-    flex-direction: column;
-    color: #fff;
-    font-size: 14px;
-    width: 100%;
-}
-
-.profile-container .gender-div select option:hover {
-    background: blueviolet;
-}
-
-#name {
-    padding: 6px 2px;
+.user-container input {
+    padding: 0.5rem 2rem;
+    color: rgb(103, 34, 167);
     border: none;
     outline: none;
-    margin: 7px 0;
-    color: rgb(91, 66, 116);
-    font-weight: 600;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
+    border-radius: 8px;
+    margin: 0 0 10px 0;
 }
 
-#name::placeholder {
-    opacity: 3;
-    color: rgb(91, 66, 116);
+.user-container input::placeholder {
+    letter-spacing: 1px;
+
 }
 
-#gender {
-    padding: 6px 2px;
-    border: none;
-    outline: none;
-    margin: 7px 0;
-    font-weight: 600;
-    color: rgb(91, 66, 116);
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
-}
-
-#save-btn,
-#delete-btn {
-    margin: 7px 0 0 3px;
-    padding: 7px 5px;
-    width: 70%;
+.user-container button {
+    background-color: #042b54;
+    padding: 0.4rem 1rem;
     cursor: pointer;
     border: none;
     outline: none;
-    color: white;
-    background-color: rgb(130, 16, 237);
-    font-weight: 600;
+    border-radius: 5px;
+    letter-spacing: 1px;
+    color: #f9f9f9;
     transition: 0.3s ease;
+    margin-bottom: 10px;
+    box-shadow: 1px 1px 3px rgba(36, 36, 36, 0.932);
 }
 
-#save-btn:hover {
-    color: rgb(130, 16, 237);
-    background-color: white;
+.user-container button:hover {
+    background-color: #0a5cb4;
 }
 
-#delete-btn:hover {
-    color: rgb(130, 16, 237);
-    background-color: white;
-}
-
-.fa-xmark {
-    position: absolute;
-    top: -28px;
-    right: -28px;
-    transform: scale(1.5);
-    color: white;
-    background-color: rgb(46, 9, 81);
-    padding: 2px 4px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: 0.2s ease;
-}
-
-.fa-xmark:hover {
-    color: blueviolet;
-    background-color: #fff;
-}
-
-.error-message,
-#error-in-noti {
-    position: absolute;
-    bottom: 10px;
-    color: snow;
+#error,
+#date-error {
     font-size: 12px;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
-    text-align: center;
+    color: red;
 }
 
-.main-icons {
-    width: 120px;
-    height: 60px;
-    padding: 0;
-    position: absolute;
-    top: 10px;
-    right: 0;
-}
-
-#profile-button,
-.noti-btn {
-    padding: 0.5rem;
-    cursor: pointer;
-    font-size: 1.5rem;
-    color: white;
-    padding: 7px 9px;
-    border-radius: 50%;
-    background: blueviolet;
-    transition: 0.3s ease;
-    margin: 5px;
-}
-
-.noti-btn:hover {
-    background: white;
-    color: blueviolet;
-}
-
-.noti-info-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 260px;
-    width: 250px;
-    visibility: hidden;
+.age-info {
+    margin-top: -5rem;
+    background-image: linear-gradient(135deg, cyan, blueviolet);
+    padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    background: rgb(72, 31, 110);
-    opacity: 0.8;
-    box-shadow: 2px 2px 5px blueviolet;
     text-align: center;
-    padding: 1rem 10px;
+    justify-content: center;
+    border-radius: 5px;
+    position: absolute;
+    max-width: 80%;
+    color: #d8cfcf;
+    visibility: hidden;
+    gap: 1rem;
+    box-shadow: 1px 1px 3px rgba(36, 36, 36, 0.932);
 }
 
-.noti-info-container label {
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
-    font-size: 15px;
+.age-info h5 {
+    margin: 0;
+}
+
+.age-info b {
     color: #fff;
 }
 
-.noti-info-container h4 {
-    color: snow;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
-    margin: 15px 0;
-}
-
-.noti-info-container input {
-    padding: 6px 2px;
-    border: none;
-    outline: none;
-    width: 80%;
-    margin: 7px 0;
-    color: rgb(91, 66, 116);
-    font-weight: 600;
-}
-
-.noti-info-container input ::placeholder {
-    letter-spacing: 1px;
-    color: blueviolet;
-}
-
-.noti-info-container button {
-    margin: 7px 0 0 3px;
-    padding: 7px 5px;
-    width: 60%;
+.age-info button {
+    background-color: #042b54;
+    padding: 0.4rem 1rem;
     cursor: pointer;
+    margin: 0;
     border: none;
     outline: none;
-    color: white;
-    background-color: rgb(130, 16, 237);
-    font-weight: 600;
+    border-radius: 5px;
+    letter-spacing: 2px;
+    color: #f9f9f9;
     transition: 0.3s ease;
 }
 
-.noti-info-container button:hover {
-    color: rgb(130, 16, 237);
-    background-color: white;
+.age-info button:hover {
+    background-color: #0a5cb4;
 }
 
-.alert-popup-box {
+
+.loader{
     position: absolute;
-    right: 1rem;
-    bottom: 2rem;
+    height: 4rem;
+    margin-top: -7rem;
     display: flex;
-    flex-direction: row;
-    align-items: start;
+    align-items: center;
     justify-content: center;
-    background: rgb(56, 2, 107);
-    padding: 8px 1px;
-    gap: 10px;
-    text-align: center;
+    border-radius: 10px;
+    width: 200px;
     visibility: hidden;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+}
+.loader.showloader{
+    visibility: visible;
 }
 
-.alert-popup-box i {
-    color: #fff;
-    padding: 0 0 0 10px;
+.dot {
+    margin: 2px;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    animation: loading 0.8s infinite;
 }
 
-.alert-popup {
-    padding: 0 10px 0 0;
-    font-size: 1rem;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
+.dot1 {
+    animation-delay: 0s;
+    background-image: linear-gradient(45deg, cyan, blueviolet);
+}
+
+.dot2 {
+    animation-delay: 0.2s;
+    background-image: linear-gradient(135deg, cyan, blueviolet);
+}
+
+.dot3 {
+    animation-delay: 0.4s;
+    background-image: linear-gradient(145deg, cyan, blueviolet);
+}
+
+@keyframes loading {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 100%;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
