--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    background-image: linear-gradient(125deg, blueviolet, rgb(6, 60, 60));
+    background-image: linear-gradient(45deg, rgb(106, 60, 148), rgb(49, 193, 193));
     background-position: center;
     background-size: cover;
 }
@@ -21,6 +21,7 @@ body {
     align-items: center;
     flex-direction: column;
     padding: 0 1rem;
+    margin-bottom: 2rem;
 }
 
 .logo {
@@ -33,14 +34,14 @@ body {
 .logo img {
     border-radius: 50%;
     width: 2rem;
+    box-shadow: 2px 2px 10px rgb(62, 183, 183);
 }
 
 h1 {
     font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
     color: snow;
     font-weight: 900;
-    text-shadow: 2px 2px rgb(44, 129, 129);
+    text-shadow: 1px 1px 5px cyan;
 }
 
 .input-btn-container {
@@ -54,6 +55,7 @@ h1 {
     padding: 3px ;
     position: relative;
     border-radius: 5px;
+    box-shadow: 1px 1px 5px rgb(230, 228, 228);
 }
 
 .input-btn-container input {
@@ -106,14 +108,20 @@ hr{
 .task-list-container li {
     font-family: 'Poppins', sans-serif;
     font-family: 'Varela Round', sans-serif;
-    padding: 8px 0;
+    padding: 9px 2px;
     color: snow;
+    border-radius: 5px;
     position: relative;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    transition: 0.3s ease;
+}
+
+.task-list-container li:hover{
+    box-shadow: 1px 1px 10px rgb(59, 164, 164);
 }
 
 .task-list-container li.checked {
@@ -122,16 +130,18 @@ hr{
 
 .task-list-container li i {
     cursor: pointer;
-    margin-left: 1rem;
-    background-color: rgb(130, 16, 237);
-    padding: 8px;
+    margin: 0 2px 0 12px;
     border-radius: 50%;
     transition: 0.3s ease;
+    display: none;
 }
 
 .task-list-container li i:hover {
-    color: blueviolet;
-    background-color: #fff;
+    color: cyan;
+}
+
+.task-list-container li:hover .fa-trash{
+    display: block;
 }
 
 @media (max-width:520px) {
@@ -175,15 +185,10 @@ hr{
     font-family: 'Poppins', sans-serif;
     font-family: 'Varela Round', sans-serif;
     padding: 7px 14px;
-    /* background-image: linear-gradient(25deg, blueviolet, rgb(49, 186, 186)); */
     font-size: 1rem;
-    /* box-shadow: 2px 2px 10px hsla(0, 1, 1, 0.5); */
+    /* box-shadow: 1px 1px 5px rgb(81, 224, 224); */
+    text-shadow: 1px 1px 15px rgb(81, 224, 224);
     overflow: hidden;
-}
-
-#profile-button:hover {
-    background: white;
-    color: blueviolet;
 }
 
 .profile-container {
@@ -201,9 +206,8 @@ hr{
     background: rgb(72, 31, 110);
     opacity: 0.9;
     padding: 0 2rem;
-    box-shadow: 2px 2px 5px blueviolet;
+    box-shadow: 1px 1px 10px cyan;
     font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
 }
 
 .profile-container .name-div {
@@ -246,19 +250,21 @@ hr{
 }
 
 #name::placeholder {
-    opacity: 3;
+    opacity: 0.7;
+    font-weight: 300;
     color: rgb(91, 66, 116);
 }
 
 #gender {
     padding: 6px 2px;
     border: none;
+    opacity: 0.8;
     outline: none;
     margin: 7px 0;
     font-weight: 600;
     color: rgb(91, 66, 116);
     font-family: 'Poppins', sans-serif;
-    font-family: 'Varela Round', sans-serif;
+    /* font-family: 'Varela Round', sans-serif; */
 }
 
 #save-btn,
@@ -331,17 +337,17 @@ hr{
     padding: 0.5rem;
     cursor: pointer;
     font-size: 1.5rem;
-    color: white;
+    color: #fff;
     padding: 7px 9px;
     border-radius: 50%;
-    background: blueviolet;
+    /* background: blueviolet; */
+    box-shadow: 2px 2px 10px rgb(5, 71, 71);
     transition: 0.3s ease;
     margin: 5px;
 }
 
-.noti-btn:hover {
-    background: white;
-    color: blueviolet;
+.noti-btn:hover, #profile-button:hover {
+    background: cyan;
 }
 
 .noti-info-container {
@@ -418,7 +424,8 @@ hr{
     flex-direction: row;
     align-items: start;
     justify-content: center;
-    background: rgb(56, 2, 107);
+    /* background: rgb(56, 2, 107); */
+    box-shadow: 2px 2px 10px #fff;
     padding: 8px 1px;
     gap: 10px;
     text-align: center;
@@ -436,4 +443,22 @@ hr{
     color: #fff;
     font-family: 'Poppins', sans-serif;
     font-family: 'Varela Round', sans-serif;
+}
+
+.fa-info{
+    transform: scale(0.8);
+    position: fixed;
+    top: 90vh;
+    left: 3rem;
+    cursor: pointer;
+    color: #fff;
+    padding: 7px 16px;
+    opacity: 0.6;
+    font-size: 1.5rem;
+    border-radius: 50%;
+    box-shadow: 1px 1px 5px rgb(5, 71, 71);
+    transition: 0.4s ease;
+}
+.fa-info:hover{
+    box-shadow: 1px 1px 10px rgb(55, 120, 120);
 }
